--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     max-width: 800px;
     margin: 20pt auto 20pt;
     padding: 20pt 0;
+    text-align: center;
 }
 
 .main{
@@ -25,35 +26,72 @@ body {
     margin: 0 auto;
 }
 
-.menuMainOpt {
+ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0 auto;
+}
+
+.menuTop li{
     display: inline-block;
-    width: 32%;
-    margin: auto;
+    width: 190px;
+    padding: 5px 0;
     text-align: center;
+    vertical-align: middle;
 }
 
-
-
-.menuMainOpt > span{
-    background-color: darkorange;
-    padding: 30pt;
-}
-
-.menuList {
+.menuSub{
     display: none;
-    background-color: salmon;
-    position: absolute;
-    width: inherit;
+    list-style-type: none;
+    padding-left: 0;
+    margin: 5px 0;
+    position:absolute;
 }
+
+.menuSub li{
+    display: block;
+    width: 180px;
+    padding: 5px;
+    background-color: goldenrod;
+}
+
+li:hover{
+    background-color: peru;
+}
+
+/*li:hover {*/
+    /*background-color: peru;*/
+/*}*/
+
+
+
+
+/*.menuMainOpt {*/
+/*display: inline-block;*/
+/*width: 32%;*/
+/*margin: auto;*/
+/*text-align: center;*/
+/*}*/
+
+
+
+/*.menuMainOpt > span{*/
+/*background-color: darkorange;*/
+/*padding: 30pt;*/
+/*}*/
+
+/*.menuList {*/
+/*display: none;*/
+/*background-color: salmon;*/
+/*position: absolute;*/
+/*width: 256px;*/
+/*margin: 30pt 0 0;*/
+/*}*/
 
 /*.menuItem {*/
-    /*width: inherit;*/
+/*width: inherit;*/
 /*}*/
 
 /*.menuList > div > span {*/
-    /*float: inherit;*/
+/*float: inherit;*/
 /*}*/
-
-div > span:hover{
-    background-color: peru;
-}
