--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ li:hover{
     /*background-color: peru;*/
     height: 100%;
     background-image: url("c1.jpg");
-    background-size: auto;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
