--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ body {
 .main{
     background-color: goldenrod;
     height: 30%;
-    /*max-width: 780px;*/
-    width: 400px;
+    max-width: 780px;
     margin: 0 auto;
 }
 
@@ -64,12 +63,11 @@ ul {
 }
 
 li:hover{
-.    background-color: peru;
+    background-color: peru;
 }
 
 
 .imgContainer {
-    /*background-color: peru;*/
     height: 100%;
     background-image: url("c1.jpg");
     background-size: contain;
