--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ ul {
     position:absolute;
 }
 
+/*express in written word the selectors occuring here*/
 .menuSub li{
     display: block;
     width: 170px;
@@ -73,4 +74,26 @@ li:hover{
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.imgSlider{
+    background-size: contain;
+}
+
+.imgSlider li {
+    display: none;
+}
+
+.imgSlider li:first-child {
+    display: block;
+}
+
+
+
+.main div img
+{
+    max-width:100%;
+    max-height:100%;
+    margin:auto;
+    display:block;
 }
