--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 
 .main{
     background-color: goldenrod;
-    height: 30%;
+    height: 60%;        /*this is key first step*/
     max-width: 780px;
     margin: 0 auto;
 }
@@ -63,37 +63,39 @@ ul {
     background-color: goldenrod;
 }
 
-li:hover{
+.menuSub li:hover{
     background-color: peru;
 }
 
 
-.imgContainer {
-    height: 100%;
-    background-image: url("c1.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
+.main>.imgSlider{
+    height: 100%;       /*this is key too, otherwise parents with percentage heights cascade*/
+    text-align: center;
 }
+
+.imgSlider>ul, ul>li{
+    height: inherit;    /*this key is cool, works with comma separated selectors*/
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.imgSlider img
+{
+    max-width:100%;     /*the key for these 2 lines to work is the parent must have sizes set*/
+    max-height:100%;
+    opacity: .5;
+}
+
 
 .imgSlider{
     background-size: contain;
 }
 
-.imgSlider li {
+.imgSlider ul li{
     display: none;
 }
 
-.imgSlider li:first-child {
+.imgSlider ul li:first-child {
     display: block;
-}
-
-
-
-.main div img
-{
-    max-width:100%;
-    max-height:100%;
-    margin:auto;
-    display:block;
 }
