--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html {
     font-family: Georgia, Verdana, "Times New Roman", "Bitstream Charter", Times, serif;
     font-weight: bold;
-    height: 100%;
+    /*height: 100%;*/
 }
 
 body {
@@ -28,7 +28,7 @@ body {
 
 .main{
     background-color: goldenrod;
-    height: 60%;        /*this is key first step*/
+    height: 350px;        /*this is key first step*/
     max-width: 780px;
     margin: 0 auto;
 }
@@ -84,7 +84,6 @@ ul {
 {
     max-width:100%;     /*the key for these 2 lines to work is the parent must have sizes set*/
     max-height:100%;
-    opacity: .5;
 }
 
 
@@ -98,4 +97,19 @@ ul {
 
 .imgSlider ul li:first-child {
     display: block;
+}
+
+.arrow{
+    position: absolute;
+    opacity: .5;
+    margin-top: 145px;
+}
+.arrow:hover{
+    opacity: 1;
+}
+.arrow.left {
+    margin-left: -370px;
+}
+.arrow.right {
+    margin-left: 320px;
 }
